--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,33 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_spinkit: ^5.2.1
   flutter_launcher_icons: ^0.14.3
+  http: ^1.3.0
+  font_awesome_flutter: ^10.8.0
+  animate_do: ^3.3.4
+  lottie: ^3.3.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+    flutter_launcher_icons:
+      android: "launcher_icon"
+      ios: true
+      image_path: "assets/icons/images.jpg"
+      min_sdk_android: 21 # android min sdk min:16, default 21
+      web:
+        generate: true
+        image_path: "assets/icons/images.jpg"
+        background_color: "#hexcode"
+        theme_color: "#hexcode"
+      windows:
+        generate: true
+        image_path: "assets/icons/images.jpg"
+        icon_size: 48 # min:48, max:256, default: 48
+      macos:
+        generate: true
+        image_path: "assets/icons/images.jpg"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -60,9 +82,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lotti/
+    - rasm/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
